--- a/Phone/main/res/values/strings_account_info.xml
+++ b/Phone/main/res/values/strings_account_info.xml
@@ -74,4 +74,10 @@
 	<string name="recent_activity_posted_transactions">Posted Transactions</string>
 	<string name="recent_activity_pending_transactions">Pending Transactions</string>
 	<string name="recent_activity_load_more">Load More</string>
+	<string name="recent_activity_date">Date</string>
+	<string name="recent_activity_description">Description</string>
+	<string name="recent_activity_amount">Amount</string>
+	<string name="recent_activity_no_activity">There was no activity for the selected period.</string>
+	<string name="recent_activity_no_new_pending">You have no new pending transactions.</string>
+	<string name="recent_activity_no_new_posted">No activity has posted to your account since your last statement.</string>
 </resources>
