--- a/Phone/main/res/layout/transaction_item.xml
+++ b/Phone/main/res/layout/transaction_item.xml
@@ -20,6 +20,7 @@
 	    	android:layout_width="0dip"
 	    	android:layout_height="wrap_content"
             style="@style/sub_copy_small"
+            android:paddingRight="@dimen/between_related_elements_padding"
 	    	android:layout_weight="1"/>
 	    
 	    <TextView 
@@ -27,6 +28,7 @@
 	    	android:layout_width="0dip"
 	    	android:layout_height="wrap_content"
             style="@style/sub_copy_small"
+            android:paddingRight="@dimen/between_related_elements_padding"
 	    	android:layout_weight="2"/>
 	    
 	    <TextView 
