--- a/Phone/main/res/values/strings_account_info.xml
+++ b/Phone/main/res/values/strings_account_info.xml
@@ -36,8 +36,8 @@
 	<string name="account_info_two_email_text">Email Address</string>
 	<string name="account_info_two_id_matches_pass_error_text">User ID and password must not be the same.</string>
 	<string name="account_info_two_username_in_use_error_text">User ID is already in use. Please choose another one.</string>
-	<string name="account_info_two_passwords_dont_match_text">Passwords must match.</string>
-	<string name="account_info_two_ids_must_match_text">User IDs must match.</string>
+	<string name="account_info_two_passwords_dont_match_text">Passwords don\'t match</string>
+	<string name="account_info_two_ids_must_match_text">User id\'s dont match</string>
 	<string name="account_info_two_new_pass_confirm_text">Confirm New Password</string>
 	<string name="strength_text">Strength</string>
 
