--- a/Phone/main/res/layout/register_forgot_type_select.xml
+++ b/Phone/main/res/layout/register_forgot_type_select.xml
@@ -4,33 +4,49 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content" >
 
-   
+    <LinearLayout
+        android:id="@+id/linear_layout_one"
+        android:layout_width="fill_parent"
+        android:layout_height="wrap_content"
+        android:orientation="vertical" >
 
-        <LinearLayout
-            android:id="@+id/linear_layout_one"
-            android:layout_width="fill_parent"
-            android:layout_height="wrap_content" 
-            android:orientation="vertical">
+        <TextView
+            android:id="@+id/forgot_credentials_label"
+            style="@style/title_copy"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/forgot_credentials_text" />
 
-            <TextView
-                android:id="@+id/forgot_credentials_label"
-                style="@style/title_copy"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="@string/forgot_credentials_text" />
+        <ListView
+            android:id="@android:id/list"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="@dimen/groups_of_elements_padding"
+            android:background="@drawable/rounded_table_corners_no_padding"
+            android:cacheColorHint="#00000000"
+            android:divider="@color/field_stroke"
+            android:dividerHeight="1dp" >
+        </ListView>
+    </LinearLayout>
 
-            <ListView
-                android:id="@android:id/list"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="@dimen/groups_of_elements_padding"
-                android:background="@drawable/rounded_table_corners_no_padding"
-                android:cacheColorHint="#00000000"
-                android:divider="@color/field_stroke"
-                android:dividerHeight="1dp" >
-            </ListView>
-        </LinearLayout>
+    <RelativeLayout
+        android:layout_width="fill_parent"
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/linear_layout_one"
+        android:id="@+id/need_help_footer"
+        android:paddingTop="30dp" >
 
-  
-
+        <include layout="@layout/old_general_need_help_footer" />
+        
+    </RelativeLayout>
+	<TextView
+            android:id="@+id/provide_feedback_button"
+            android:layout_below="@+id/need_help_footer"
+            style="@style/blue_hyperlink_small"
+            android:layout_centerHorizontal="true"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="@dimen/orange_button_margin_top"
+            android:layout_marginBottom="@dimen/orange_button_margin_top"
+            android:text="@string/feedback_text" />
 </RelativeLayout>
