--- a/Phone/main/res/layout/toggle_range_selector.xml
+++ b/Phone/main/res/layout/toggle_range_selector.xml
@@ -2,8 +2,7 @@
 <RadioGroup xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:orientation="horizontal"
-    android:padding="5dp" >
+    android:orientation="horizontal" >
 
     <ToggleButton
         android:id="@+id/toggle_left"
@@ -12,9 +11,9 @@
         android:layout_weight="1"
         android:background="@drawable/selector_toggle_left"
         android:checked="true"
+        android:textColor="@color/white"
         android:textOff="@string/toggle_all"
         android:textOn="@string/toggle_all"
-        android:textColor="@color/white"
         android:textSize="14sp" />
 
     <ToggleButton
@@ -24,9 +23,9 @@
         android:layout_weight="1"
         android:background="@drawable/selector_toggle_mid"
         android:checked="false"
+        android:textColor="@color/field_copy"
         android:textOff="@string/toggle_specific"
         android:textOn="@string/toggle_specific"
-        android:textColor="@color/field_copy"
         android:textSize="14sp" />
 
     <ToggleButton
@@ -36,9 +35,9 @@
         android:layout_weight="1"
         android:background="@drawable/selector_toggle_right"
         android:checked="false"
+        android:textColor="@color/field_copy"
         android:textOff="@string/toggle_range"
         android:textOn="@string/toggle_range"
-        android:textColor="@color/field_copy"
         android:textSize="14sp" />
 
 </RadioGroup>
