--- a/Phone/main/res/values/strings_transactions.xml
+++ b/Phone/main/res/values/strings_transactions.xml
@@ -15,5 +15,5 @@
     <string name="toggle_all">All</string>
     <string name="toggle_specific">Specific</string>
     <string name="toggle_range">Range</string>
-    
+    <string name="dollar_sign">$</string>
 </resources>
